Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/GenericThrowable.out
GenericThrowable.java:10:35: compiler.err.generic.throwable
1 error
