Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/GenericThrowable.java
/*
 * @test /nodynamiccopyright/
 * @bug 4984157
 * @summary java.lang.Throwable inheritance in parameterized type
 * @author gafter
 *
 * @compile/fail/ref=GenericThrowable.out -XDrawDiagnostics   GenericThrowable.java
 */

class GenericThrowable<T> extends NullPointerException {
}
